# dylib-kit

./: Cargo.toml  README.md  dylib-kit.code-workspace
crates/dylib-hook-registry/: Cargo.toml
crates/dylib-hook-registry/src/: lib.rs
crates/dylib-patcher/: Cargo.toml
crates/dylib-patcher/src/: cli.rs  lib.rs
docs/: registry_race_fix.md  sdk_design.md
