[package]
name = "dylib-hook-registry"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Coordination registry for multiple dylib hooks injected into a host process"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
