[package]
name = "dylib-patcher"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Reusable macOS dylib injection toolkit: build, inject, codesign, verify, restore"

[dependencies]
dylib-hook-registry = { path = "../dylib-hook-registry" }
anyhow = "1"
libc = "0.2"
dirs = "6"
sha2 = "0.10"
chrono = "0.4"
